Prevent selected verses from wrapping to next line

--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,7 @@ body {
 
 .selected {
   line-height: 200%;
+  white-space: nowrap;
 }
 
 .selected .short,
